--- a/console-root/pom.xml
+++ b/console-root/pom.xml
@@ -19,9 +19,8 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.cloud</groupId>
-            <artifactId>console-security-old</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
