--- a/console-manage/src/main/resources/bootstrap.yml
+++ b/console-manage/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: console-manage
+    name: manage
   profiles:
     active: dev
   cloud:
@@ -13,13 +13,13 @@ spring:
       config:
         server-addr: 127.0.0.1:8848
         file-extension: yml
-        namespace: a2294d4a-a9ea-427d-992b-2ed3575d8f0f
+        namespace: console-manage
 management:
   endpoints:
     web:
       exposure:
         include: "*"
 logging:
-  config: http://127.0.0.1:8848/nacos/v1/cs/configs?tenant=a2294d4a-a9ea-427d-992b-2ed3575d8f0f&group=DEFAULT_GROUP&dataId=logback.xml
+  config: http://127.0.0.1:8848/nacos/v1/cs/configs?tenant=console-manage&group=DEFAULT_GROUP&dataId=logback.xml
 #server:
 #  port: 8022
