--- a/console-security/src/main/resources/bootstrap.yml
+++ b/console-security/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: console-security
+    name: security
   profiles:
     active: dev
   cloud:
@@ -13,10 +13,10 @@ spring:
       config:
         server-addr: 127.0.0.1:8848
         file-extension: yml
-        namespace: 2dbdd0c8-f4ca-42eb-bf7a-300ca62fc94b
+        namespace: console-security
 logging:
 #  level:
 #    org:
 #      springframework:
 #        security: DEBUG
-  config: http://127.0.0.1:8848/nacos/v1/cs/configs?tenant=2dbdd0c8-f4ca-42eb-bf7a-300ca62fc94b&group=DEFAULT_GROUP&dataId=logback.xml
+  config: http://127.0.0.1:8848/nacos/v1/cs/configs?tenant=console-security&group=DEFAULT_GROUP&dataId=logback.xml
